# imperial-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2024-08-27-172649_add_users/: down.sql  up.sql
migrations/2024-08-28-010735_add_servers/: down.sql  up.sql
src/: errors.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs  servers.rs  users.rs
src/db/models/: mod.rs  servers.rs  users.rs
src/discord/: commands.rs  events.rs  mod.rs  roles.rs
src/mail/: mod.rs
