[package]
	name    = "imperial-bot"
	version = "0.1.0"
	edition = "2021"

[dependencies]
	diesel             = { version = "^2.2.3", features = ["postgres"] }
	diesel-derive-enum = { version = "^2.1.0", features = ["postgres"] }
	dotenv             = "^0.15.0"
	poise              = "^0.6.1"
	rand               = "^0.8.5"
	tokio              = { version = "^1.39.3", features = ["full"] }
