[package]
	name    = "imperial-bot"
	version = "0.1.0"
	edition = "2021"

[dependencies]
	# Database
	diesel             = { version = "^2.2.3", features = ["postgres"] }
	diesel-derive-enum = { version = "^2.1.0", features = ["postgres"] }

	# Email
	lettre = { version = "^0.11.7", features = ["tokio1", "tokio1-native-tls"] }

	# Discord 
	poise = "^0.6.1"

	# Logging
	env_logger = "^0.11.5"
	log        = "^0.4.22"

	# Misc.
	dotenv    = "^0.15.0"
	rand      = "^0.8.5"
	thiserror = "^1.0.63"
	tokio     = { version = "^1.40.0", features = ["full"] }
